2017-?:
  * Partial reveal support: allow scrum master to reveal feedbacks from specific participants
  * Participant page / mobile: Glad / Control selection plot area
  * Participant page: Publish All button added
  * Full Screen button added

2017-04-18:
  * Participant page / web: Glad / Control selection plot area
  * bugfix: QR Code size adjustment, avoid overflow
 
2017-04-17:
  * Post-it coloring added
  * Edit session name

2017-04-08: 
  * Allow scrum master to resize post-it
  * Anonymous mode switch
  * Avoid user list overflow
  
2017-03-19:
  * Making websocket channel more stable: reconnect on error, retry on fail
  * Making post-it wider in case of long text
  * Desktop web client added
  * GA tracking
  
2017-03-09:
  * Launch www.retrospective-dashboard.org
  * Allow user to remove post-it