@@ -5,6 +5,8 @@ public class SessionParameters {
 	private int size;
 	
 	private String name;
+	
+	private String comment;
 
 	public int getSize() {
 		return size;
@@ -20,6 +22,14 @@ public class SessionParameters {
 
 	public void setName(String name) {
 		this.name = name;
+	}
+
+	public String getComment() {
+		return comment;
+	}
+
+	public void setComment(String comment) {
+		this.comment = comment;
 	}
 	
 	
